ADD_SUBDIRECTORY(FTPSClient)
ADD_SUBDIRECTORY(LibAudioClient)
ADD_SUBDIRECTORY(LibCommonFileOperation)
ADD_SUBDIRECTORY(LibConvertSymbolsToLua)
ADD_SUBDIRECTORY(LibDataTransfer)
ADD_SUBDIRECTORY(LibDLBackStageMapWidget)
ADD_SUBDIRECTORY(LibDLCollectMap)
ADD_SUBDIRECTORY(LibDLCreateExcel)
ADD_SUBDIRECTORY(LibDLDeviceViewWidget)
ADD_SUBDIRECTORY(LibDLFixedAreaWidget)
ADD_SUBDIRECTORY(LibDLHangRailCommonTools)
ADD_SUBDIRECTORY(LibDLHangRailCommonWidget)
ADD_SUBDIRECTORY(LibDLHangRailConfigData)
ADD_SUBDIRECTORY(LibDLHangRailHardwareCtrl)
ADD_SUBDIRECTORY(LibDLHangRailRobotConfigData)
ADD_SUBDIRECTORY(LibDLHangRailRobotDBOperation)
ADD_SUBDIRECTORY(LibDLHangRailSocket)
ADD_SUBDIRECTORY(LibDLHangUserControl)
ADD_SUBDIRECTORY(LibDLIntelligentSocket)
ADD_SUBDIRECTORY(LibDLLuaScript)
ADD_SUBDIRECTORY(LibDLMapEditorWidget)
ADD_SUBDIRECTORY(LibDLNewInfraredSDK)
ADD_SUBDIRECTORY(LibDLRelocateProcesser)
ADD_SUBDIRECTORY(LibDLSceneView)
ADD_SUBDIRECTORY(LibDLSMSMessage)
ADD_SUBDIRECTORY(LibDLStatusBar)
ADD_SUBDIRECTORY(LibDlToolItems)
ADD_SUBDIRECTORY(LibDLWheelAlarmManager)
ADD_SUBDIRECTORY(LibDLWheelCollectControlWidget)
ADD_SUBDIRECTORY(LibDLWheelCollectMapWidget)
ADD_SUBDIRECTORY(LibDLWheelCompareDetection)
ADD_SUBDIRECTORY(LibDLWheelCountDateTime)
ADD_SUBDIRECTORY(LibDLWheelCustomWidget)
ADD_SUBDIRECTORY(LibDLWheelIntelligentMainWiindow)
ADD_SUBDIRECTORY(LibDLWheelMainWindow)
ADD_SUBDIRECTORY(LibDLWheelMainWindowForDevelop)
ADD_SUBDIRECTORY(LibDLWheelPowerStationEdit)
ADD_SUBDIRECTORY(LibDLWheelRobotConfigData)
ADD_SUBDIRECTORY(LibDLWheelRobotCoreSocket)
ADD_SUBDIRECTORY(LibDLWheelRobotCreateReport)
ADD_SUBDIRECTORY(LibDLWheelRobotDBOperation)
ADD_SUBDIRECTORY(LibDLWheelRobotDeviceCure)
ADD_SUBDIRECTORY(LibDLWheelRobotStateShow)
ADD_SUBDIRECTORY(LibDLWheelRobotTask)
ADD_SUBDIRECTORY(LibDLWheelTaskDeviceDBSearch)
ADD_SUBDIRECTORY(LibFftreal)
ADD_SUBDIRECTORY(LibHCNetCamera)
ADD_SUBDIRECTORY(LibLaserParamWidget)
ADD_SUBDIRECTORY(LibMapReader)
ADD_SUBDIRECTORY(LibMapReaderInfoWidget)
ADD_SUBDIRECTORY(LibProtoClient)
ADD_SUBDIRECTORY(LibProtoServer)
ADD_SUBDIRECTORY(LibQCustomPlot)
ADD_SUBDIRECTORY(LibQJson)
ADD_SUBDIRECTORY(LibRCF)
ADD_SUBDIRECTORY(LibRobotControlWidget)
ADD_SUBDIRECTORY(LibSmapBuilder)
ADD_SUBDIRECTORY(LibSocket)
ADD_SUBDIRECTORY(LibSocketLogin)
ADD_SUBDIRECTORY(LibSpectrum)
ADD_SUBDIRECTORY(LibVoiceSpeak)
ADD_SUBDIRECTORY(LibZip)
ADD_SUBDIRECTORY(LibDLHangRailRobotCoreSocket)
ADD_SUBDIRECTORY(LibCommonMsg)
ADD_SUBDIRECTORY(LibCommonSocket)
ADD_SUBDIRECTORY(LibHttpProtocol)
ADD_SUBDIRECTORY(WheelTaskManageWidget)
ADD_SUBDIRECTORY(LibDLWheelPatrolResultBrowse)
ADD_SUBDIRECTORY(LibDLWheelRobotBimCore)
