find_package( Qt5Widgets REQUIRED )
IF (NOT SOURCES)
    FILE(GLOB_RECURSE SOURCES "*.cpp")
ENDIF (NOT SOURCES)

SET(EXTRA_LIBS
     ##ADD LIB FILE HERE
	 LibDlToolItems
	 LibDLWheelRobotDBOperation
)

ADD_LIBRARY(LibDLDeviceViewWidget ${SOURCES}) 
TARGET_LINK_LIBRARIES(LibDLDeviceViewWidget ${Qt5Widgets_LIBRARIES} ${EXTRA_LIBS})