find_package( Qt5Widgets REQUIRED )
IF (NOT SOURCES)
    FILE(GLOB_RECURSE SOURCES "*.cpp")
ENDIF (NOT SOURCES)

SET(EXTRA_LIBS
     ##ADD LIB FILE HERE
	 LibDlToolItems
	 LibDataTransfer
)

ADD_LIBRARY(LibDLFixedAreaWidget ${SOURCES}) 
TARGET_LINK_LIBRARIES(LibDLFixedAreaWidget ${Qt5Widgets_LIBRARIES} ${EXTRA_LIBS})